// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigProvider componentConfig.Switch default 1`] = `
<button
  aria-checked="false"
  class="arco-switch arco-switch-type-circle"
  role="switch"
  type="button"
>
  <div
    class="arco-switch-dot"
  />
</button>
`;

exports[`ConfigProvider componentConfig.Switch set className globally 1`] = `
<button
  aria-checked="false"
  class="arco-switch arco-switch-type-circle global-default-class"
  role="switch"
  type="button"
>
  <div
    class="arco-switch-dot"
  />
</button>
`;

exports[`ConfigProvider componentConfig.Switch set className globally and component set className itself. 1`] = `
<button
  aria-checked="false"
  class="arco-switch arco-switch-type-circle component-class"
  role="switch"
  type="button"
>
  <div
    class="arco-switch-dot"
  />
</button>
`;
